--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,7 +19,8 @@ SRCS	= 	ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c	
 			ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c\
 			ft_putchar.c ft_putendl.c ft_putnbr.c ft_putstr.c ft_lstnew.c \
 			ft_lstadd_front.c ft_lstsize.c ft_lstadd_back.c ft_lstlast.c ft_lstdelone.c\
-			ft_lstiter.c ft_lstclear.c ft_lstmap.c ft_putnbr_unsigned_fd.c ft_putnbr_uns.c
+			ft_lstiter.c ft_lstclear.c ft_lstmap.c ft_putnbr_unsigned_fd.c \
+			ft_putnbr_uns.c ft_nbdigits_base.c
 CC		=	gcc
 CFLAGS	=	-Wall -Wextra -Werror
 
